--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Drumming Experience (from a noob)</title>
-        <script src="main.js" defer></script>
-        <link rel="stylesheet" href="style.css">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Drumming Experience (from a noob)</title>
+    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
     <header>
@@ -36,9 +37,11 @@
             <h1>Drum Types</h1>
             <p>There's many kinds of drums you can play</p>
             <p>Though we will only cover the main ones, but if you want to know, your drum set can look like this</p>
-            <img src="./images/drumset_stock.jpg" alt="Stock Image" width="100"><img src="./images/drumset_reddit.jpg" alt="Reddit" width="100">
+            <img src="./images/drumset_stock.jpg" alt="Stock Image" width="100"><img src="./images/drumset_reddit.jpg"
+                alt="Reddit" width="100">
             <p>Or this</p>
-            <img src="./images/drumset_overdone.jpg" alt="What the hell" width="100"><img src="./images/drumset_toomuch.jpg" alt="What the fuck" width="100">
+            <img src="./images/drumset_overdone.jpg" alt="What the hell" width="100"><img
+                src="./images/drumset_toomuch.jpg" alt="What the fuck" width="100">
             <br><br>
             <div class="drum" id="snare"></div>
             <div class="drum" id="high"></div>
@@ -54,19 +57,21 @@
 
         </section>
         <section class="page" id="page3">
-<img src="./images/drum sticks.jpg" width="300">
+            <img src="./images/drum sticks.jpg" width="300">
         </section>
         <section class="page" id="page4">
             <div class="type4" id="rockschool">
-<img src="./images/rockschool_logo.png" width="500">
+                <img src="./images/rockschool_logo.png" width="500">
             </div>
             <div class="type4" id="yamaha">
-<img src="./images/yamaha_logo.jpg" width="500">
+                <img src="./images/yamaha_logo.jpg" width="500">
             </div>
         </section>
     </main>
 </body>
 
-<footer></footer>
+<footer>
+    <img id="qrCode" src="./images/qrCode.png">
+</footer>
 
 </html>
