--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 </html>
 
-
+<!-- 
 <section class="page" id="page1">
     <button id="leftBtn">Left</button>
     <button id="rightBtn">Right</button>
@@ -176,4 +176,4 @@
     <button id="downBtn">Down</button>
     <button id="resetBtn">Reset</button>
     <div id="ball">Ball</div>
-</section>
+</section> -->
